<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimplEmail</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="sbj">Subject:</string>
    <string name="msg">Message:</string>
    <string name="send">Send Email</string>
    <string name="smiley">smiley</string>
    <string name="emoji">Add Emoji: </string>

</resources>
